--- a/css/memories.css
+++ b/css/memories.css
@@ -442,33 +442,33 @@
 @media screen and (min-aspect-ratio: 10/9) {
 	.ly-txt01 {
 		position:absolute;
-		width: 40%;
+		width: 80%;
 		left:10%;
 		top:10%;
 	}
 	
-	.ly-txt02 {
+	/* .ly-txt02 {
 		position:absolute;
 		width: 40%;
 		left:60%;
 		top:10%;
-	}
+	} */
 }
 
 @media screen and (max-aspect-ratio: 3/4) {
 	.ly-txt01 {
 		position:absolute;
-		width: 40%;
+		width: 80%;
 		left:10%;
 		top:5%;
 	}
 	
-	.ly-txt02 {
+	/* .ly-txt02 {
 		position:absolute;
 		width: 40%;
 		left:15%;
 		top:50%;
-	}
+	} */
 
 	.ly-txt01 p {
 		font-size: 4vw !important;
@@ -2731,7 +2731,7 @@
 @media screen and (max-aspect-ratio: 3/4) {
 	.ly-box81 {
 		width: 65%;
-		height: 60%;
+		height: 90%;
 		border: 2px #CCC;
 		background-color: #fff;
 		background-color: rgba(255,255,255,0.6);
@@ -2799,7 +2799,7 @@
 	}
 
 	.ly-box81 p, .ly-box82 p {
-		font-size: 2.5vw !important;
+		font-size: 4.5vw !important;
 	}
 }
 
@@ -2880,9 +2880,9 @@
 	font-family: Microsoft YaHei;
 	font-size: 14px;
 	text-indent:1em;
-	font-color: #000;
+	color: #000;
 	position: absolute;
-	padding-top: 20px;
+	padding-top: 10px;
 	left: 5%;
 	top: 11%;
 	opacity: 0;
